--- a/views/index.jade
+++ b/views/index.jade
@@ -2,4 +2,6 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #{title}
+  ul
+    each article, i in articles
+      li= article.title
